// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SteppedListCard > should hide the toggle button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-3 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-3[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-3[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-7 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
  min-width: 0;
}

.emotion-16 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-16:active {
  text-decoration-thickness: 2px;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-29 {
  margin-bottom: 1.5rem;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="uv_x6hyh50 "
        style="--uv_3mg8xe0: 9fr 1fr; --uv_3mg8xe1: 9fr 1fr; --uv_3mg8xe2: 9fr 1fr; --uv_3mg8xe3: 9fr 1fr; --uv_3mg8xe4: 9fr 1fr; --uv_3mg8xe5: 9fr 1fr;"
      >
        <h1>
          Header
        </h1>
      </div>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50 "
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="emotion-5 emotion-6"
          >
            <ul
              class="emotion-7 emotion-8"
            >
              <li
                class="emotion-9 emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-13"
                >
                  1
                </div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <h3
                    class="emotion-16 emotion-17 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-9 emotion-10 emotion-11"
              >
                <div
                  class="emotion-21 emotion-13"
                >
                  2
                </div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <h3
                    class="emotion-16 emotion-17 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-27 emotion-28"
          >
            <div
              class="emotion-29 emotion-30"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-31 emotion-32"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteppedListCard > should work with custom hide action 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-3 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-3[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-3[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-7 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
  min-width: 0;
}

.emotion-16 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-16:active {
  text-decoration-thickness: 2px;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-29 {
  margin-bottom: 1.5rem;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="uv_x6hyh50 "
        style="--uv_3mg8xe0: 9fr 1fr; --uv_3mg8xe1: 9fr 1fr; --uv_3mg8xe2: 9fr 1fr; --uv_3mg8xe3: 9fr 1fr; --uv_3mg8xe4: 9fr 1fr; --uv_3mg8xe5: 9fr 1fr;"
      >
        <h3
          class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow11 uv_m4c9ow1b uv_m4c9ow3c"
        >
          Header
        </h3>
        <button
          class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50 "
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="emotion-5 emotion-6"
          >
            <ul
              class="emotion-7 emotion-8"
            >
              <li
                class="emotion-9 emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-13"
                >
                  1
                </div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <h3
                    class="emotion-16 emotion-17 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-9 emotion-10 emotion-11"
              >
                <div
                  class="emotion-21 emotion-13"
                >
                  2
                </div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <h3
                    class="emotion-16 emotion-17 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-27 emotion-28"
          >
            <div
              class="emotion-29 emotion-30"
            >
              <h1>
                First step
              </h1>
            </div>
            Description
            <div
              class="emotion-31 emotion-32"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteppedListCard > should work with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-3 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-3[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-3[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-7 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
  min-width: 0;
}

.emotion-16 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-16:active {
  text-decoration-thickness: 2px;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-29 {
  margin-bottom: 1.5rem;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="uv_x6hyh50 "
        style="--uv_3mg8xe0: 9fr 1fr; --uv_3mg8xe1: 9fr 1fr; --uv_3mg8xe2: 9fr 1fr; --uv_3mg8xe3: 9fr 1fr; --uv_3mg8xe4: 9fr 1fr; --uv_3mg8xe5: 9fr 1fr;"
      >
        <h1>
          Header
        </h1>
        <div
          aria-controls="«r0»"
          aria-describedby="«r0»"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <button
            class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
            type="button"
          >
            hide button
          </button>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50 "
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="emotion-5 emotion-6"
          >
            <ul
              class="emotion-7 emotion-8"
            >
              <li
                class="emotion-9 emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-13"
                >
                  1
                </div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <h3
                    class="emotion-16 emotion-17 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-9 emotion-10 emotion-11"
              >
                <div
                  class="emotion-21 emotion-13"
                >
                  2
                </div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <h3
                    class="emotion-16 emotion-17 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-27 emotion-28"
          >
            <div
              class="emotion-29 emotion-30"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-31 emotion-32"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteppedListCard > should work with pre-completed step 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-3 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-3[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-3[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-3 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-3[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-3[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-7 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-7 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
  min-width: 0;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
  min-width: 0;
}

.emotion-16 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-16:active {
  text-decoration-thickness: 2px;
}

.emotion-16 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-16:active {
  text-decoration-thickness: 2px;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

.emotion-23 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-23 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-23 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-23 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-31 {
  margin-bottom: 1.5rem;
}

.emotion-31 {
  margin-bottom: 1.5rem;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="uv_x6hyh50 "
        style="--uv_3mg8xe0: 9fr 1fr; --uv_3mg8xe1: 9fr 1fr; --uv_3mg8xe2: 9fr 1fr; --uv_3mg8xe3: 9fr 1fr; --uv_3mg8xe4: 9fr 1fr; --uv_3mg8xe5: 9fr 1fr;"
      >
        <h1>
          Header
        </h1>
        <button
          class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="emotion-2 emotion-3 emotion-4"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="uv_x6hyh50 "
          style="--uv_3mg8xe0: 1fr 3fr; --uv_3mg8xe1: 1fr 3fr; --uv_3mg8xe2: 1fr 3fr; --uv_3mg8xe3: 1fr 3fr; --uv_3mg8xe4: 1fr 3fr; --uv_3mg8xe5: 1fr 3fr;"
        >
          <div
            class="emotion-5 emotion-6"
          >
            <ul
              class="emotion-7 emotion-8"
            >
              <li
                class="emotion-9 emotion-10 emotion-11"
              >
                <div
                  class="emotion-12 emotion-13"
                >
                  1
                </div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <h3
                    class="emotion-16 emotion-17 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-9 emotion-10 emotion-11"
              >
                <div
                  class="emotion-21 emotion-13"
                >
                  <svg
                    class="emotion-23 emotion-24"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
                    />
                  </svg>
                </div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <h3
                    class="emotion-16 emotion-17 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-29 emotion-30"
          >
            <div
              class="emotion-31 emotion-32"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-33 emotion-34"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
